--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -6,4 +6,11 @@ nav {
     font-size: 18px;
     color: #222;
     margin-left: 3rem;
+    padding: .5rem;
+}
+
+.links:hover {
+    cursor: pointer;
+    color: hotpink;
+    text-decoration-line: dashed #222;
 }
