--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -11,6 +11,31 @@ nav {
 
 .links:hover {
     cursor: pointer;
-    color: hotpink;
-    text-decoration-line: dashed #222;
+    color: #FBD2D7;
+    font-weight: bold;
+    text-decoration: dashed #222;
+}
+
+.transparent-img {
+    -webkit-transition: opacity 0.3s linear; 
+    -moz-transition: opacity 0.3s linear;
+    -o-transition: opacity 0.3s linear;
+    
+    transition: opacity 0.3s linear;
+    display: block;
+    margin: auto;
+}
+
+@media screen and (max-width: 768px) {
+
+    nav {
+        font-family: 'Tajawal', sans-serif;
+        font-size: 18px;
+        color: #222;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        padding: .5rem;
+    }
+
 }
