--- a/src/components/Name.css
+++ b/src/components/Name.css
@@ -8,12 +8,12 @@
 .image-medium {
   max-width: 25%;
   min-width: 370px;
-  border-radius: 5%;
+  border-radius: 45px;
 }
 .image-large {
   max-width: 45%;
   min-width: 370px;
-  border-radius: 5%;
+  border-radius: 35px;
 }
 
 .name {
