--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-image: linear-gradient(0deg, rgb(251, 210, 215, .6), rgb(251, 210, 215, .9)), url('images/mountains.jpg');
+  background-image: linear-gradient(0deg, rgb(251, 210, 215, .8), rgb(251, 210, 215, .2)), url('images/mountains.jpg');
   height: 430px;
   padding: 20px;
   color: #222;
@@ -63,18 +63,18 @@
 
 /**//**//**//**//**//**//**//**//**/
 /* RESPONSIVE FOR CELLULAR DEVICES */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
 
   .arrow {
-    float: right;
+    float: right; 
     margin: 2rem;
-    padding-right: 30%;
-    width: 20%;
+    padding-right: 10%;
+    width: 10%;
     position: relative;
-    -webkit-animation-name: down;  /* Safari 4.0 - 8.0 */
-    -webkit-animation-duration: 3s;  /* Safari 4.0 - 8.0 */    
-    -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */
-    -webkit-animation-fill-mode: backwards; /* Safari 4.0 - 8.0 */
+    -webkit-animation-name: down;
+    -webkit-animation-duration: 3s;   
+    -webkit-animation-delay: 2s;
+    -webkit-animation-fill-mode: backwards;
     animation-iteration-count: infinite;
     animation-direction: alternate;
     animation-name: down;
@@ -83,22 +83,22 @@
     animation-fill-mode: backwards;
   }
 
-}
+} 
 
 /* RESPONSIVE FOR IPAD */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 415px) {
 
       .arrow {
         float: right;
-        margin: 2rem;
-        padding-top: 7.2rem;
-        padding-right: 40%;
-        width: 8%;
+        /* margin: 2rem; */
+        /* padding-top: 7.2rem; */
+        padding-right: 39%;
+        width: 10%;
         position: relative;
-        -webkit-animation-name: down;  /* Safari 4.0 - 8.0 */
-        -webkit-animation-duration: 3s;  /* Safari 4.0 - 8.0 */    
-        -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */
-        -webkit-animation-fill-mode: backwards; /* Safari 4.0 - 8.0 */
+        -webkit-animation-name: down;
+        -webkit-animation-duration: 3s;    
+        -webkit-animation-delay: 2s;
+        -webkit-animation-fill-mode: backwards;
         animation-iteration-count: infinite;
         animation-direction: alternate;
         animation-name: down;
@@ -110,7 +110,7 @@
 }
 
 /* RESPONSIVE FOR IPAD PRO */
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
 
   .arrow {
     float: right;
@@ -118,10 +118,10 @@
     padding-right: 40%;
     width: 12%;
     position: relative;
-    -webkit-animation-name: down;  /* Safari 4.0 - 8.0 */
-    -webkit-animation-duration: 3s;  /* Safari 4.0 - 8.0 */    
-    -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */
-    -webkit-animation-fill-mode: backwards; /* Safari 4.0 - 8.0 */
+    -webkit-animation-name: down;
+    -webkit-animation-duration: 3s;   
+    -webkit-animation-delay: 2s;
+    -webkit-animation-fill-mode: backwards;
     animation-iteration-count: infinite;
     animation-direction: alternate;
     animation-name: down;
@@ -130,4 +130,4 @@
     animation-fill-mode: backwards;
   }
 
-}
+} */
