--- a/src/components/Name.css
+++ b/src/components/Name.css
@@ -6,28 +6,27 @@
 }
 
 .image-medium {
-  
   background-image: url('./images/mesnap.jpg');
-  max-width: 25%;
-  min-width: 420px;
+  max-width: 20%;
+  min-width: 400px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-x: 100%;
-  height: 420px;
-  border-radius: 300px;
-  border: 8px solid white;
+  height: 400px;
+  border-radius: 400px;
+  border: 2px solid white;
 }
 
 .image-examples {
-  max-width: 25%;
+  max-width: 35%;
   min-width: 240px;
-  border-radius: 35px;
+  border-radius: 30px;
 }
 
 .image-large {
-  max-width: 45%;
-  min-width: 370px;
+  max-width: 55%;
+  min-width: 35%;
   border-radius: 35px;
+  margin-top: 5rem;
 }
 
 .name {
@@ -40,4 +39,17 @@ h2 {
   font-family: 'Tajawal', sans-serif;
   font-size: 18px;
   color: #222;
+}
+
+@media screen and (max-width: 450px) {
+  .image-medium {
+    background-image: url('./images/mesnap.jpg');
+    max-width: 20%;
+    min-width: 200px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 200px;
+    border-radius: 200px;
+    border: 2px solid white;
+  }
 }
