footer component rendering with gradient and icons, dev and design components separated, css and flexbox for images

--- a/src/components/DevDesign.css
+++ b/src/components/DevDesign.css
@@ -25,9 +25,8 @@ margin-right: 14%;
 
 .flexbox-container {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: space-between;
     height: 400px;
-    margin-right: 3rem;
-    margin-left: 3rem;
+    margin: auto;
 }
