--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,24 @@
+
+
 .footer {
-    background-image: linear-gradient(0deg, rgb(251, 210, 215, .8), rgb(251, 210, 215, .2)), url('images/mountains.jpg');
-    height: 130px;
-    padding: 20px;
+    background-image: linear-gradient(0deg, rgb(251, 210, 215, 1), rgb(251, 210, 215, 0));
+    padding: 80px;
     color: #222;
+  }
+
+  .footer-text {
+    margin: auto;
+    text-align: center;
+    line-height: 120px;
+  }
+
+  .footer-icons {
+    width: 35px;
+  }
+
+  .footer-flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    width: 300px;
+    justify-content: space-around;
   }
