--- a/src/components/DevDesign.css
+++ b/src/components/DevDesign.css
@@ -30,3 +30,11 @@ margin-right: 14%;
     height: 400px;
     margin: auto;
 }
+
+
+.image-large {
+    max-width: 55%;
+    min-width: 35%;
+    border-radius: 35px;
+    margin-top: 5rem;
+  }
