--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Tajawal:200');
 
 
 .footer {
     background-image: linear-gradient(0deg, rgb(251, 210, 215, 1), rgb(251, 210, 215, 0));
     padding: 80px;
     color: #222;
+    font-family: 'Tajawal', sans-serif;
+    font-size: 18px;
   }
 
   .footer-text {
