--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-image: linear-gradient(0deg, rgb(251, 210, 215, .8), rgb(251, 210, 215, .2)), url('images/mountains.jpg');
-  height: 430px;
+  height: 35%;
   padding: 20px;
   color: #222;
 }
@@ -35,7 +35,7 @@
 .arrow {
   float: right;
   margin: 2rem;
-  padding-right: 12rem;
+  padding-right: 14rem;
   width: 10%;
   position: relative;
   -webkit-animation-name: down;  /* Safari 4.0 - 8.0 */
@@ -60,74 +60,3 @@
   from {top: 0px;}
   to {top: 50px;}
 }
-
-/**//**//**//**//**//**//**//**//**/
-/* RESPONSIVE FOR CELLULAR DEVICES */
-@media screen and (max-width: 768px) {
-
-  .arrow {
-    float: right; 
-    margin: 2rem;
-    padding-right: 10%;
-    width: 10%;
-    position: relative;
-    -webkit-animation-name: down;
-    -webkit-animation-duration: 3s;   
-    -webkit-animation-delay: 2s;
-    -webkit-animation-fill-mode: backwards;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-name: down;
-    animation-duration: 2s;    
-    animation-delay: 3s;
-    animation-fill-mode: backwards;
-  }
-
-} 
-
-/* RESPONSIVE FOR IPAD */
-@media screen and (max-width: 415px) {
-
-      .arrow {
-        float: right;
-        /* margin: 2rem; */
-        /* padding-top: 7.2rem; */
-        padding-right: 39%;
-        width: 10%;
-        position: relative;
-        -webkit-animation-name: down;
-        -webkit-animation-duration: 3s;    
-        -webkit-animation-delay: 2s;
-        -webkit-animation-fill-mode: backwards;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-        animation-name: down;
-        animation-duration: 2s;    
-        animation-delay: 3s;
-        animation-fill-mode: backwards;
-      }
-
-}
-
-/* RESPONSIVE FOR IPAD PRO */
-/* @media screen and (max-width: 1024px) {
-
-  .arrow {
-    float: right;
-    margin: 2rem;
-    padding-right: 40%;
-    width: 12%;
-    position: relative;
-    -webkit-animation-name: down;
-    -webkit-animation-duration: 3s;   
-    -webkit-animation-delay: 2s;
-    -webkit-animation-fill-mode: backwards;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-name: down;
-    animation-duration: 2s;    
-    animation-delay: 3s;
-    animation-fill-mode: backwards;
-  }
-
-} */
