--- a/src/components/DevDesign.css
+++ b/src/components/DevDesign.css
@@ -1,40 +1,66 @@
 @import url('https://fonts.googleapis.com/css?family=Tajawal:200');
 
-
 h5 {
     font-family: 'Tajawal', sans-serif;
-    font-size: 32px;
+    font-size: 35px;
     color: #222;
     text-align: center;    
 }
 
 .top-margin {
-    margin-top: 12%;
+    margin-top: 7%;
 }
 
 .header-left{
     padding-top: 2.5rem;
+    padding-bottom: 1rem;
     text-align: left;
-    margin-left: 10%;
+    margin-left: 10.2%;
 }
 
 .header-right {
-text-align: right;
-margin-right: 14%;
+    margin-top: 5rem;
+    padding-bottom: 1rem;
+    text-align: right;
+    margin-right: 20%;
 }
+
+.wrap-text{
+    width: 45%;
+    font-family: 'Tajawal', sans-serif;
+    font-size: 20px;
+    padding-top: .6rem;
+}
+
+.image-examples {
+    max-width: 500px;
+    min-width: 140px;
+    border-radius: 30px;
+    margin-top: 2rem;
+  }
+
+.presentation {
+    width: 410px;
+    height: 260px;
+}
+
+.pinboard {
+    margin-top: 13rem;
+}
+
 
 .flexbox-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 400px;
-    margin: auto;
+    margin-left: 10%;
 }
 
+.zoom {
+    transition: transform 1s;
+    margin: 0 auto;
+}
 
-.image-large {
-    max-width: 55%;
-    min-width: 35%;
-    border-radius: 35px;
-    margin-top: 5rem;
-  }
+.zoom:hover {
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1); 
+}
