--- a/src/components/DevDesign.css
+++ b/src/components/DevDesign.css
@@ -30,6 +30,8 @@ h5 {
     font-family: 'Tajawal', sans-serif;
     font-size: 20px;
     padding-top: .6rem;
+    text-align: left;
+    text-indent: 2rem;
 }
 
 .image-examples {
