--- a/src/components/DevDesign.css
+++ b/src/components/DevDesign.css
@@ -25,11 +25,28 @@ h5 {
     margin-right: 20%;
 }
 
+.header-center {
+    text-align: center;
+    padding-bottom: 1rem;
+    margin-top: 5rem;
+}
+
 .wrap-text{
     width: 45%;
     font-family: 'Tajawal', sans-serif;
     font-size: 20px;
     padding-top: .6rem;
+    text-align: left;
+    text-indent: 2rem;
+}
+
+.wrap-text-center {
+    width: 45%;
+    font-family: 'Tajawal', sans-serif;
+    font-size: 20px;
+    padding-top: .6rem;
+    margin-right: auto;
+    margin-left: auto;
     text-align: left;
     text-indent: 2rem;
 }
@@ -65,4 +82,21 @@ h5 {
     -ms-transform: scale(1.1); /* IE 9 */
     -webkit-transform: scale(1.1); /* Safari 3-8 */
     transform: scale(1.1); 
+}
+
+
+
+.readmore-box {
+    max-height: 120px;
+    position: relative;
+    overflow: hidden;
+  }
+
+.readmore-box .read-more { 
+    position: absolute; 
+    bottom: 0; 
+    left: 0;
+    width: 55%; 
+    text-align: center; 
+    margin: 0; padding: 30px 0; 
 }
