--- a/src/components/App.css
+++ b/src/components/App.css
@@ -30,6 +30,14 @@
 }
 
 
+nav {
+  font-family: 'Tajawal', sans-serif;
+  font-size: 18px;
+  color: #222;
+  margin-left: 3rem;
+  padding: .5rem;
+}
+
 /**//**//**//**//**//**/
  /* ARROW ANIMATION */
 .arrow {
