--- a/src/components/Name.css
+++ b/src/components/Name.css
@@ -19,7 +19,7 @@
 
 .name {
   font-family: 'Tajawal', sans-serif;
-  font-size: 75px;
+  font-size: 95px;
   color: #222;
 }
 
@@ -28,3 +28,8 @@ h2 {
   font-size: 18px;
   color: #222;
 }
+
+
+/* .nav-space {
+  padding: 1.5rem;
+} */
