media queries for projects, about me and inspirations

--- a/src/components/MediaQueries.css
+++ b/src/components/MediaQueries.css
@@ -18,31 +18,56 @@
         border: 2px solid white;
     }
 
+    .tend-image {
+        margin-top: 2rem;
+    }
+
     .image-examples {
         display: flex;
         flex-flow: row wrap;
         max-width: 40%;
-        /* min-width: 140px; */
         border-radius: 30px;
+    }
+
+    .inspirations-inline{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        padding-right: 0rem;
+        padding-left: 0rem;
+        padding-bottom: 1rem;
+    }
+
+    .wrap-text{
+        width: 95%;
+        font-family: 'Tajawal', sans-serif;
+        font-size: 23px;
+        padding-top: .6rem;
+        text-align: left;
+        line-height: 2rem;
+        /* text-indent: 2rem; */
+    }
+
+    .about-columns {
+        column-count: 3;
+        column-width: 20%;
+        line-height: 2rem;
+    }
+
+    .wrap-text-center {
+        width: 55%;
+        font-family: 'Tajawal', sans-serif;
+        font-size: 23px;
+        padding-top: .6rem;
+        margin-right: auto;
+        margin-left: auto;
+        text-align: left;
+        text-indent: 2rem;
     }
 }
 
 
 @media screen and (max-width: 415px) {
-    .header-left{
-        font-size: 22px;
-        padding-top: 2.5rem;
-        text-align: left;
-        margin: auto;
-    }
-    
-    .header-right {
-        font-size: 22px;
-        text-align: right;
-        margin: auto;
-        padding-top: 10rem;
-    }
-
     .wrap-text{
         width: 45%;
         font-family: 'Tajawal', sans-serif;
@@ -66,6 +91,46 @@
         max-width: 45%;
         min-width: 140px;
         border-radius: 30px;
+    }
+    
+    .tend-image {
+        margin-top: 2rem;
+    }
+
+    .wrap-text{
+        width: 95%;
+        font-family: 'Tajawal', sans-serif;
+        font-size: 23px;
+        padding-top: .6rem;
+        text-align: left;
+        line-height: 2rem;
+        /* text-indent: 2rem; */
+    }
+
+    .wrap-text-center {
+        width: 55%;
+        font-family: 'Tajawal', sans-serif;
+        font-size: 23px;
+        padding-top: .6rem;
+        margin-right: auto;
+        margin-left: auto;
+        text-align: left;
+        text-indent: 2rem;
+    }
+    
+    .about-columns {
+        column-count: 3;
+        column-width: 20%;
+        line-height: 2rem;
+    }
+
+    .inspirations-inline{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        padding-right: 0rem;
+        padding-left: 0rem;
+        padding-bottom: 1rem;
     }
 
     
@@ -107,25 +172,61 @@
 /* images */
     .image-medium {
       background-image: url('./images/mesnap.jpg');
-      height: 350px;
-      max-width: 35%;
-      min-width: 350px;
+      height: 250px;
+      max-width: 25%;
+      min-width: 250px;
       background-size: cover;
       background-repeat: no-repeat;
-      border-radius: 200px;
+      border-radius: 250px;
       border: 2px solid white;
     }
 
     .image-examples {
-        max-width: 200px;
+        max-width: 150px;
         /* min-width: 140px; */
         border-radius: 30px;
     }
-
-    .presentation {
-        display: none;
+    
+    .tend-image {
+        margin-top: 2rem;
     }
     
+    .wrap-text{
+        width: 95%;
+        font-family: 'Tajawal', sans-serif;
+        font-size: 23px;
+        padding-top: .6rem;
+        text-align: left;
+        line-height: 2rem;
+        /* text-indent: 2rem; */
+    }
+
+    .wrap-text-center {
+        width: 80%;
+        font-family: 'Tajawal', sans-serif;
+        font-size: 23px;
+        padding-top: .6rem;
+        margin-right: auto;
+        margin-left: auto;
+        text-align: left;
+        text-indent: 2rem;
+    }
+    
+    .about-columns {
+        column-count: 1;
+        column-width: 100%;
+        line-height: 2rem;
+    }
+
+    .inspirations-inline{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        padding-right: 0rem;
+        padding-left: 0rem;
+        padding-bottom: 1rem;
+    }
+
 /* arrow */
     .arrow {
         margin: 2rem;
@@ -158,6 +259,10 @@
         /* min-width: 140px; */
         border-radius: 30px;
       }
+      
+    .tend-image {
+        margin-top: 2rem;
+    }
   }
 
 
