--- a/src/components/Name.css
+++ b/src/components/Name.css
@@ -23,6 +23,13 @@
   color: #222;
 }
 
+.title{
+  font-family: 'Tajawal', sans-serif;
+  font-size: 23px;
+  color: #222;
+
+}
+
 h2 {
   font-family: 'Tajawal', sans-serif;
   font-size: 18px;
