--- a/src/components/DevDesign.css
+++ b/src/components/DevDesign.css
@@ -11,7 +11,15 @@ h5 {
     color: #222;
     text-align: center;
     padding-bottom: 1rem;
-    margin-top: 11%;
+    margin-top: 10%;
+    margin-bottom: 1rem;
+}
+
+.header-center-less {
+    color: #222;
+    text-align: center;
+    padding-bottom: 1rem;
+    margin-top: 5%;
     margin-bottom: 1rem;
 }
 
@@ -49,8 +57,8 @@ h5 {
 }
 
 .about-columns {
-    column-count: 3;
-    column-width: 20%;
+    column-count: 2;
+    column-width: 25%;
     line-height: 2rem;
 }
 
