--- a/src/components/DevDesign.css
+++ b/src/components/DevDesign.css
@@ -82,11 +82,6 @@ h5 {
     text-align: right;
     font-size: 23px;
 }
-/* 
-.about-me-border {
-    border: thin solid #222;
-    padding: 2rem;
-} */
 
 .flexbox-container {
     display: flex;
@@ -135,4 +130,11 @@ h5 {
     cursor: pointer;
     color: #FBD2D7;
     font-weight: bolder;
+}
+
+
+.coming-soon {
+    padding-top: .5rem;
+    color: #222;
+    font-size: 22px;
 }
