--- a/src/components/DevDesign.css
+++ b/src/components/DevDesign.css
@@ -7,11 +7,19 @@ h5 {
     text-align: center;    
 }
 
+
+h6 {
+    font-family: 'Tajawal', sans-serif;
+    font-size: 25px;
+    color: rgb(66, 66, 66);
+    text-align: center;    
+}
+
 .header-center {
     color: #222;
     text-align: center;
     padding-bottom: 1rem;
-    margin-top: 10%;
+    margin-top: 2rem;
     margin-bottom: 1rem;
 }
 
@@ -19,23 +27,31 @@ h5 {
     color: #222;
     text-align: center;
     padding-bottom: 1rem;
-    margin-top: 5%;
+    margin-top: 5rem;
     margin-bottom: 1rem;
 }
+
+.header-center-lesser {
+    font-size: 18px;
+    float: left;
+    text-indent: .5rem;
+  }
 
 .wrap-text{
     width: 95%;
     font-family: 'Tajawal', sans-serif;
     font-size: 23px;
     padding-top: .6rem;
-    text-align: left;
+    text-align: justify;
+    text-justify: inter-word;
+    padding-left: .5rem;
     line-height: 2rem;
 }
 
 .wrap-text-center {
     width: 55%;
     font-family: 'Tajawal', sans-serif;
-    font-size: 23px;
+    font-size: 22px;
     padding-top: .6rem;
     margin-right: auto;
     margin-left: auto;
@@ -43,29 +59,52 @@ h5 {
     /* text-indent: 2rem; */
 }
 
-.drop-cap {
+/* .drop-cap {
     float: left;
     width: 0.7em;
-    font-size: 300%;
-    line-height: 80%;
-}
+    font-size: 150%;
+    line-height: 95%;
+} */
 
 .project-width {
     width: 500px;
     padding-right: 2rem;
     padding-left: 2rem;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .about-columns {
+    justify-content: center;
     column-count: 2;
-    column-width: 25%;
+    column-width: 40%;
     line-height: 2rem;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.work-columns {
+    width: 90%;
+}
+
+.job {
+    font-size: 16px;
+    color: rgb(253, 129, 143)
+}
+
+.about-columns ul li ul{
+    color: rgb(253, 129, 143);
+    margin-left: 10%;
+}
+
+.about-columns ul{
+    margin-left: 10%;
 }
 
 .image-examples {
     max-width: 500px;
     min-width: 140px;
-    border-radius: 30px;
+    border-radius: 20px;
     margin-top: 2rem;
   }
 
@@ -123,7 +162,9 @@ h5 {
     text-decoration: dotted underline;
 }
 
-
+.left {
+    float: left;
+}
 
 .links:hover,
 .project-links:hover {
@@ -135,6 +176,6 @@ h5 {
 
 .coming-soon {
     padding-top: .5rem;
-    color: #222;
+    color: #FBD2D7;
     font-size: 22px;
 }
