brought in ux processes for 3bears

--- a/src/components/DevDesign.css
+++ b/src/components/DevDesign.css
@@ -94,6 +94,7 @@ h6 {
     padding-left: 2rem;
     text-align: justify;
     text-justify: inter-word;
+    padding-bottom: 3%;
 }
 
 .about-columns {
