--- a/src/components/Hexagon.css
+++ b/src/components/Hexagon.css
@@ -2,9 +2,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    padding-right: 10rem;
-    padding-left: 10rem;
-    padding-bottom: 1rem;
+    padding: 0 10rem 5rem 10rem;
 }
 
 
