redesigned complete website

--- a/src/components/Name.css
+++ b/src/components/Name.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Tajawal:200');
 
-* {
-	margin: 0;
-	padding: 0;
-}
 
 .image-medium {
   background-image: url('./images/mesnap.jpg');
@@ -19,16 +15,16 @@
 
 .name {
   font-family: 'Tajawal', sans-serif;
-  font-size: 95px;
-  color: #222;
+  font-size: 550%;
+  color: rgb(92, 3, 62);
 }
 
 .title{
   font-family: 'Tajawal', sans-serif;
   font-size: 23px;
   color: #222;
-
 }
+
 
 h2 {
   font-family: 'Tajawal', sans-serif;
