--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,17 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Tajawal:200');
+
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Tajawal', sans-serif;
+}
+
+.home-link {
+  text-decoration: none;
+}
 
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-image: linear-gradient(0deg, rgb(251, 210, 215, .8), rgb(251, 210, 215, .2)), url('images/mountains.jpg');
-  height: 35%;
-  /* padding: 0px; */
+  background-repeat: no-repeat;
+  height: 90vh;
+  padding-top: 20px;
   color: #222;
 }
 
@@ -38,33 +46,37 @@ nav {
   padding: .5rem;
 }
 
-/**//**//**//**//**//**/
- /* ARROW ANIMATION */
-.arrow {
-  /* text-align: center; */
-  margin-left: 45%;
-  margin-top: 2rem;
-  width: 10%;
-  position: relative;
-  -webkit-animation-name: down;  /* Safari 4.0 - 8.0 */
-  -webkit-animation-duration: 3s;  /* Safari 4.0 - 8.0 */    
-  -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */
-  -webkit-animation-fill-mode: backwards; /* Safari 4.0 - 8.0 */
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-name: down;
-  animation-duration: 2s;    
-  animation-delay: 3s;
-  animation-fill-mode: backwards;
-}
 
-/* Safari 4.0 - 8.0 */
-@-webkit-keyframes down {
-  to {top: 0px;}
-  from {top: 50px;}
-}
 
-@keyframes down {
-  from {top: 0px;}
-  to {top: 50px;}
-}
+
+
+        /**//**//**//**//**//**/
+        /* ARROW ANIMATION */
+        .arrow {
+          /* text-align: center; */
+          margin-left: 45%;
+          margin-top: 2rem;
+          width: 10%;
+          position: relative;
+          -webkit-animation-name: down;  /* Safari 4.0 - 8.0 */
+          -webkit-animation-duration: 3s;  /* Safari 4.0 - 8.0 */    
+          -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */
+          -webkit-animation-fill-mode: backwards; /* Safari 4.0 - 8.0 */
+          animation-iteration-count: infinite;
+          animation-direction: alternate;
+          animation-name: down;
+          animation-duration: 2s;    
+          animation-delay: 3s;
+          animation-fill-mode: backwards;
+        }
+
+        /* Safari 4.0 - 8.0 */
+        @-webkit-keyframes down {
+          to {top: 0px;}
+          from {top: 50px;}
+        }
+
+        @keyframes down {
+          from {top: 0px;}
+          to {top: 50px;}
+        }
