--- a/src/components/App.css
+++ b/src/components/App.css
@@ -18,7 +18,15 @@
 .App-header {
   background-image: linear-gradient(0deg, rgb(251, 210, 215, .8), rgb(251, 210, 215, .2)), url('images/mountains.jpg');
   background-repeat: no-repeat;
-  height: 90vh;
+  height: 91vh;
+  padding-top: 20px;
+  color: #222;
+}
+
+.App-header2 {
+  background-image: linear-gradient(0deg, rgb(251, 210, 215, .8), rgb(251, 210, 215, .2)), url('images/mountains.jpg');
+  background-repeat: no-repeat;
+  height: 190px;
   padding-top: 20px;
   color: #222;
 }
@@ -46,6 +54,21 @@ nav {
   padding: .5rem;
 }
 
+
+
+
+.footer-icons {
+  width: 20px;
+}
+
+.footer-flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  width: 200px;
+  justify-content: space-around;
+  float: right;
+  margin-top: .3rem;
+}
 
 
 
