--- a/src/components/Routes/Routes.css
+++ b/src/components/Routes/Routes.css
@@ -8,6 +8,12 @@
     margin-top: 1rem;
 }
 
+h2 {
+    font-size: 28px;
+    margin: 1em;
+    text-align: left;
+    padding-left: 15%;
+}
 
 
 
@@ -23,10 +29,6 @@
         display: flex;
         flex-flow: row wrap;
         height: 350px;   
-    }
-
-    .design-items {
-        
     }
 
 /* 
@@ -45,8 +47,11 @@
                                    */
 
 
-                .about-me {
-                    background-color: rgb(251, 210, 215);
+                .about-me { 
+                    background-image: linear-gradient(0deg, rgb(251, 210, 215, .8), rgb(251, 210, 215, .2)), url('../images/mountains.jpg');
+                    background-repeat: no-repeat;
+                    height: 50px;
+                    padding-top: 20px;
                     color: rgb(56, 56, 56);
                     padding: 1%;
                     /* width: 90%; */
@@ -56,10 +61,11 @@
 
                 .grey-content {
                     font-size: 22px;
-                    background-color: rgba(56, 56, 56, 0.164);
+                    /* background-color: rgba(56, 56, 56, 0.164); */
                     color: rgb(92, 3, 62);
-                    padding: 2% 8%;
+                    padding: 2%;
                     margin: 0 12% 4% 12%;
+                    
                 }
 
                 .selfie {
