--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,29 +7,35 @@
   font-family: 'Tajawal', sans-serif;
 }
 
+.self-image {
+  background-image: url('./images/mesnap.jpg');
+  margin-right: auto; 
+  margin-left: auto;
+  max-width: 20%;
+  min-width: 400px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px;
+  border-radius: 400px;
+  border: 2px solid white;
+}
+
 .home-link {
   text-decoration: none;
 }
 
 .App {
   text-align: center;
+  /* margin-right: auto auto; */
 }
 
 .App-header {
   background-image: linear-gradient(0deg, rgb(251, 210, 215, .8), rgb(251, 210, 215, .2)), url('images/mountains.jpg');
   background-repeat: no-repeat;
-  height: 91vh;
-  padding-top: 20px;
+  height: 100vh;
   color: #222;
 }
 
-.App-header2 {
-  background-image: linear-gradient(0deg, rgb(251, 210, 215, .8), rgb(251, 210, 215, .2)), url('images/mountains.jpg');
-  background-repeat: no-repeat;
-  height: 190px;
-  padding-top: 20px;
-  color: #222;
-}
 
 .App-title {
   font-size: 1.5em;
@@ -55,8 +61,6 @@ nav {
 }
 
 
-
-
 .footer-icons {
   width: 20px;
 }
@@ -69,37 +73,3 @@ nav {
   float: right;
   margin-top: .3rem;
 }
-
-
-
-
-        /**//**//**//**//**//**/
-        /* ARROW ANIMATION */
-        .arrow {
-          /* text-align: center; */
-          margin-left: 45%;
-          margin-top: 2rem;
-          width: 10%;
-          position: relative;
-          -webkit-animation-name: down;  /* Safari 4.0 - 8.0 */
-          -webkit-animation-duration: 3s;  /* Safari 4.0 - 8.0 */    
-          -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */
-          -webkit-animation-fill-mode: backwards; /* Safari 4.0 - 8.0 */
-          animation-iteration-count: infinite;
-          animation-direction: alternate;
-          animation-name: down;
-          animation-duration: 2s;    
-          animation-delay: 3s;
-          animation-fill-mode: backwards;
-        }
-
-        /* Safari 4.0 - 8.0 */
-        @-webkit-keyframes down {
-          to {top: 0px;}
-          from {top: 50px;}
-        }
-
-        @keyframes down {
-          from {top: 0px;}
-          to {top: 50px;}
-        }
