--- a/src/components/Name.css
+++ b/src/components/Name.css
@@ -1,38 +1,84 @@
 @import url('https://fonts.googleapis.com/css?family=Tajawal:200');
 
 
-.image-medium {
-  background-image: url('./images/mesnap.jpg');
-  max-width: 20%;
-  min-width: 400px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 400px;
-  border-radius: 400px;
-  border: 2px solid white;
-}
-
-
 .name {
   font-family: 'Tajawal', sans-serif;
-  font-size: 550%;
+  font-size: 100px;
   color: rgb(92, 3, 62);
+  padding: 5px;
 }
 
 .title{
   font-family: 'Tajawal', sans-serif;
-  font-size: 23px;
+  font-size: 25px;
   color: #222;
+  padding: 5px;
+}
+
+.construction {
+  margin-top: 2em;
+  font-weight: bold;
+  padding: 5px;
+}
+
+h6 {
+  padding: 5px;
 }
 
 
-h2 {
-  font-family: 'Tajawal', sans-serif;
-  font-size: 18px;
-  color: #222;
+@media all and (max-width: 1000px) and (min-width: 600px) {
+
+  .self-image {
+    /* background-image: url('./images/mesnap.jpg'); */
+    margin-right: auto; 
+    margin-left: auto;
+    max-width: 20%;
+    min-width: 300px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 300px;
+    border-radius: 300px;
+    border: 2px solid white;
+  }
+
+  .name {
+    font-family: 'Tajawal', sans-serif;
+    font-size: 75px;
+    color: rgb(92, 3, 62);
+  }
+  
+  .title{
+    font-family: 'Tajawal', sans-serif;
+    font-size: 22px;
+    color: #222;
+  }
+
 }
 
+@media all and (max-width: 599px) and (min-width: 300px) {
 
-/* .nav-space {
-  padding: 1.5rem;
-} */
+  .self-image {
+    /* background-image: url('./images/mesnap.jpg'); */
+    margin-right: auto; 
+    margin-left: auto;
+    max-width: 20%;
+    min-width: 200px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 200px;
+    border-radius: 200px;
+    border: 2px solid white;
+  }
+
+  .name {
+    font-family: 'Tajawal', sans-serif;
+    font-size: 70px;
+    color: rgb(92, 3, 62);
+  }
+  
+  .title{
+    font-family: 'Tajawal', sans-serif;
+    font-size: 22px;
+    color: #222;
+  }
+}
