--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -16,11 +16,11 @@
 
 .links {
     color: rgb(92, 3, 62);
-    text-decoration: none;
-    font-size: 16px;
-    letter-spacing: 5px;
+    /* text-decoration: none; */
+    /* font-size: 16px;
+    letter-spacing: 2px;
+    margin: 0 1em 0 1em; */
 }
-
 
 .links:hover,
 .project-links:hover {
