--- a/src/components/Name.css
+++ b/src/components/Name.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Tajawal:200');
+@import url('https://fonts.googleapis.com/css?family=Nothing+You+Could+Do');
 
 
 .name {
@@ -19,6 +20,11 @@
   margin-top: 2em;
   font-weight: bold;
   padding: 5px;
+  font-family: 'Nothing You Could Do', cursive;
+  color: rgb(92, 3, 62);
+  text-decoration: none;
+  font-size: 26px;
+  letter-spacing: 3px;
 }
 
 h6 {
